force-app/main/default/objects/OrderItemStageEvent__c/OrderItemStageEvent__c.object-meta.xml
<CustomObject>
    <description>Об&apos;єкт-колектор для інтеграції змін статусів і наступного запуску update  в батчі</description>
    <label>OrderItemStageEvent</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderItemStageEvent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>