force-app/main/default/objects/OrderItemStageEvent__c/fields/ERP_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Item_ID__c</fullName>
    <description>Npp</description>
    <label>ERP Item ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>