force-app/main/default/objects/OrderItemStageEvent__c/fields/ERP_Key__c.field-meta.xml
<CustomField>
    <fullName>ERP_Key__c</fullName>
    <description>Undoc-Npp, те саме, що в ID_ERP__c</description>
    <label>ERP Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>