force-app/main/default/objects/OrderItemStageEvent__c/fields/ERP_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Opportunity_ID__c</fullName>
    <description>Undoc з ІТ</description>
    <label>ERP Opportunity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>