force-app/main/default/objects/OrderItemStageEvent__c/fields/Is_Unknown_Stage__c.field-meta.xml
<CustomField>
    <fullName>Is_Unknown_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Чи є ця стадія ІТ невідомою (немає в CMDT мапингу стадій ІТ / статусів SF)</description>
    <label>Is Unknown Stage</label>
    <type>Checkbox</type>
</CustomField>