force-app/main/default/objects/OrderItemStageEvent__c/fields/Raw_Stage_Code__c.field-meta.xml
<CustomField>
    <fullName>Raw_Stage_Code__c</fullName>
    <description>Код стадії в ІТ: _12, _05 тощо</description>
    <label>Raw Stage Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>