force-app/main/default/objects/OrderItemStageEvent__c/fields/SF_Stage__c.field-meta.xml
<CustomField>
    <fullName>SF_Stage__c</fullName>
    <description>Уже мапнута стадія в термінах SF</description>
    <label>SF Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>